manifests/cluster-addons/velero/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: velero
  namespace: velero
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: velero
      name: velero

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toFQDNs:
        - matchName: 'hel1.your-objectstorage.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-agent
  namespace: velero
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: velero
      name: node-agent

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kopia-maintain-jobs
  namespace: velero
spec:
  # Could maybe be matched better
  endpointSelector:
    matchExpressions:
      - key: batch.kubernetes.io/job-name
        operator: Exists
      - key: velero.io/repo-name
        operator: Exists

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toFQDNs:
        - matchName: 'hel1.your-objectstorage.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
